[+] fixed the layout issues in landscape mode

--- a/app/styles/globals.scss
+++ b/app/styles/globals.scss
@@ -89,7 +89,7 @@
 html {
   height: var(--full-height);
 
-  font-family: "Noto Sans", "SF Pro SC", "SF Pro Text", "SF Pro Icons",
+  font-family: "Noto Sans SC", "SF Pro SC", "SF Pro Text", "SF Pro Icons",
     "PingFang SC", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
 }
 
@@ -100,33 +100,16 @@ body {
   padding: 0;
   height: var(--full-height);
   width: 100vw;
-  display: flex;
+  display: grid;
   justify-content: center;
   align-items: center;
   user-select: none;
   touch-action: pan-x pan-y;
-  overflow: hidden;
+  overflow: auto;
 
   @media only screen and (max-width: 600px) {
     background-color: var(--second);
   }
-}
-
-body.landscape-mode {
-  @media only screen and (orientation: landscape) {
-    background-color: var(--gray);
-    color: var(--black);
-    margin: 0;
-    padding: 0;
-    height: var(--full-height);
-    width: 100vw;
-    display: flex;
-    justify-content: center;
-    align-items: initial;
-    user-select: none;
-    touch-action: pan-x pan-y;
-    overflow: auto;
-    }
 }
 
 ::-webkit-scrollbar {
